--- a/src/app/components/formulario-usuario/formulario-usuario.component.css
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.css
@@ -15,7 +15,7 @@ article {
 }
 
 article form {
-    background-color: rgba(0,0,0,0.4);
+    background-color: #2B2B2B;
     padding: 40px;
     box-shadow: 0 0 2px inset rgba(256,256,256,0.3);
     width: 400px;
@@ -24,13 +24,25 @@ article form {
 }
 
 article form .fechar{
+    color: #43B02A;
     align-self: flex-end;
     cursor: pointer;
+}
+
+article form .fechar:hover{
+    color: #2c8019;
 }
 
 article form input{
     display: block;
     width: 100%;
+}
+
+article form input:focus{
+    outline-style: solid;
+    outline-color: #43B02A;
+    outline-width: 2px;
+    border-radius: 5px;
 }
 
 article form div {
@@ -44,14 +56,6 @@ article form div input {
     margin-right: 10px;
 }
 
-article form div a.remove{
-    color: #C00;
-}
-
-article form div a.remove:hover{
-    color: rgb(252, 7, 7);
-}
-
 article form .controles{
     display: flex;
     justify-content: flex-end;
@@ -59,9 +63,31 @@ article form .controles{
     margin-bottom: 0;
 }
 
-article form .controles .link{
-    margin-right: auto;
+article form .controles .salvar{
+    width: 70px;
+    height: 35px;
+    border: none;
+    border-radius: 5px;
+    background-color: #43B02A;
+    color: #fff;
+    font-weight: 700;
 }
+article form .controles .salvar:hover{
+    background-color: #2c8019;
+    font-weight: 800;
+}
+
+article form .controles .link{
+    cursor: pointer;
+    margin-right: auto;
+    
+}
+
+article form .controles .link:hover{
+    color: #43B02A;
+    font-weight: 700;
+}
+
 
 span {
     cursor: pointer;
