--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -18,7 +18,7 @@
             <span (click)="esconderErro()">x</span>
         </div>
         <div class="controles">      
-            <button type="button" class="link">voltar</button>
+            <p class="link">Voltar</p>
             <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)">Salvar</button>
         </div>
     </form>
