--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -10,7 +10,7 @@
             <input type="password" name="senha" id="senha" [(ngModel)]="senha">
         </label>
         <div class="controles">
-            <p class="link">Voltar</p>
+            <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarCampos()">Salvar</button>
         </div>
     </form>
