--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -11,7 +11,7 @@
         </label>
         <label>
             Confirme sua senha:
-            <input type="password" name="senha" id="senha" [(ngModel)]="senhaConfirmada">
+            <input type="password" name="senha-confirmada" id="senha" [(ngModel)]="senhaConfirmada">
         </label>
         <div *ngIf="senhaInvalida" class="alert alert-danger" role="alert">
             Confirmação de senha inválida
@@ -19,7 +19,7 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/']">Voltar</p>
-            <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)">Salvar</button>
+            <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)" (click)="validarCampos()">Salvar</button>
         </div>
     </form>
 
