--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,6 +4,7 @@
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
+    margin-bottom: 100px;
     color: #FFFFFF;
     font-family: 'Montserrat', sans-serif;
 }
