--- a/src/app/components/formulario-cliente/formulario-cliente.component.html
+++ b/src/app/components/formulario-cliente/formulario-cliente.component.html
@@ -1,13 +1,15 @@
 <form class="form" (submit)="envioFormulario()">
-    <div class="form-group">
-      <label class="label" for="exampleInputEmail1">Nome</label>
-      <input type="text" name="nome" class="form-control" id="nome" placeholder="Entre seu nome" [(ngModel)]="nome">
-      
-      <label class="label" for="exampleInputEmail1">Sobrenome</label>
-      <input type="text" name="sobrenome" class="form-control" id="sobrenome" placeholder="Entre seu sobrenome" [(ngModel)]="sobrenome">
-      
-      <label class="label" for="exampleInputEmail1">Email</label>
-      <input type="text" name="email" class="form-control" id="email" placeholder="Entre seu email" [(ngModel)]="email">
-    </div>
-    <button type="submit" class="btn btn-outline-warning">Enviar</button>
-  </form>
+  <div class="form-group">
+    <label class="label" for="exampleInputEmail1">Nome</label>
+    <input type="text" name="nome" class="form-control" id="nome" placeholder="Entre seu novo nome" [(ngModel)]="nome">
+    
+    <label class="label" for="exampleInputEmail1">Sobrenome</label>
+    <input type="text" name="sobrenome" class="form-control" id="sobrenome" placeholder="Entre seu novo sobrenome" [(ngModel)]="sobrenome">
+    
+    <label class="label" for="exampleInputEmail1">Email</label>
+    <input type="text" name="email" class="form-control" id="email" placeholder="Entre seu novo email" [(ngModel)]="email">
+  </div>
+  
+  
+  <button type="submit" class="botao">Enviar</button>
+</form>
