--- a/src/app/components/formulario-cliente-update/formulario-cliente-update.component.css
+++ b/src/app/components/formulario-cliente-update/formulario-cliente-update.component.css
@@ -1,34 +1,67 @@
-.btn{
-    border: 3px solid #2B2B2B;
-    color: #2B2B2B;
-    font-weight: 700; 
-}
-
-.btn:hover {
-    background-color: #43B02A;
-    border: 3px solid #43B02A;
-    color: #fff
-}
-
-.form-control:focus {
-    border: 1px solid #2B2B2B;
-    box-shadow: 1px 1px 3px #2B2B2B;
-}
-
-.btn:active {
-    background-color: #2B2B2B;
-    border: 3px solid #2B2B2B;
-    color: #fff
+.container{
+    font-family: 'Montserrat', sans-serif;
+    margin: 30px auto;
 }
 
 .form {
-    margin: 30px auto;
+    border: 4px solid #333;
+    background-color: #333;
+    border-radius: 5px;
+    padding: 0px 30px;
+    padding-bottom: 30px;
+}
 
-    border: 1px solid #999;
-    box-shadow: 1px 1px 2px #2B2B2B;
-    padding: 30px;
+.form-control{
+    background-color: #999;
+    border: 2px solid #222;
+    
+}
+.form-control::placeholder{
+    color: #fff;
+    opacity: 0.6;
+}
+
+.form-control:focus {
+    border: 1px solid #43B02A;
+    box-shadow: 1px 1px 3px #43B02A;
+}
+
+.control{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.botao{
+    width: 70px;
+    height: 35px;
+    border-radius: 5px;
+    background-color: #43B02A;
+    border: 3px solid #43B02A;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700; 
+}
+
+.botao:hover {
+    border-radius: 5px;
+    background-color: #2c8019;
+    border: 3px solid #2c8019;
+    color: #fff
+}
+
+.voltar{
+    cursor: pointer;
+    color: #fff;
+    font-weight: 700;
+}
+
+.voltar:hover{
+    color: #43B02A;
+    font-weight: 800;
 }
 
 .label {
     margin-top: 15px;
+    color: #fff;
 }
