--- a/src/app/components/formulario-cliente-update/formulario-cliente-update.component.html
+++ b/src/app/components/formulario-cliente-update/formulario-cliente-update.component.html
@@ -1,4 +1,5 @@
-<form class="form" (submit)="envioFormulario()">
+<div class="container">
+  <form class="form" (submit)="envioFormulario()">
     <div class="form-group">
       <label class="label" for="exampleInputEmail1">Nome</label>
       <input type="text" name="nome" class="form-control" id="nome" placeholder="Entre seu novo nome" [(ngModel)]="nome">
@@ -9,5 +10,10 @@
       <label class="label" for="exampleInputEmail1">Email</label>
       <input type="text" name="email" class="form-control" id="email" placeholder="Entre seu novo email" [(ngModel)]="email">
     </div>
-    <button type="submit" class="btn btn-outline-warning">Enviar</button>
+    
+    <div class="control">
+      <p class="voltar">Voltar</p>
+      <button type="submit" class="botao">Enviar</button>
+    </div>
   </form>
+</div>
