--- a/src/app/components/formulario-servico-update/formulario-servico-update.component.html
+++ b/src/app/components/formulario-servico-update/formulario-servico-update.component.html
@@ -1,13 +1,19 @@
-<form class="form" (submit)="envioFormulario()">
+<div class="container">
+  <form class="form" (submit)="envioFormulario()">
     <div class="form-group">
       <label class="label" for="exampleInputEmail1">Titulo</label>
-      <input type="text" name="titulo" class="form-control" id="nome" placeholder="Novo título" [(ngModel)]="novoTitulo">
+      <input type="text" name="titulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="novoTitulo">
       
       <label class="label" for="exampleInputEmail1">Descricao</label>
-      <input type="text" name="descricao" class="form-control" id="sobrenome" placeholder="Nova descrição" [(ngModel)]="novaDescricao">
+      <input type="text" name="descricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="novaDescricao">
       
       <label class="label" for="exampleInputEmail1">Valor</label>
-      <input type="text" name="valor" class="form-control" id="email" placeholder="0" [(ngModel)]="novoValor">
+      <input type="text" name="email" class="form-control" id="email" placeholder="Entre valor" [(ngModel)]="novoValor">
     </div>
-    <button type="submit" class="btn btn-outline-warning">Enviar</button>
+    
+    <div class="control">
+      <p class="voltar">Voltar</p>
+      <button type="submit" class="botao">Enviar</button>
+    </div>
   </form>
+</div>
