--- a/src/app/components/formulario-servico-update/formulario-servico-update.component.html
+++ b/src/app/components/formulario-servico-update/formulario-servico-update.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <form class="form" (submit)="envioFormulario()">
     <div class="form-group">
-      <label class="label" for="exampleInputEmail1">Titulo</label>
-      <input type="text" name="titulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="novoTitulo">
+      <label class="label" for="exampleInputEmail1">Novo Titulo</label>
+      <input type="text" name="novoTitulo" class="form-control" id="titulo" placeholder="Entre titulo" [(ngModel)]="novoTitulo">
       
-      <label class="label" for="exampleInputEmail1">Descricao</label>
-      <input type="text" name="descricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="novaDescricao">
+      <label class="label" for="exampleInputEmail1">Nova Descricao</label>
+      <input type="text" name="novaDescricao" class="form-control" id="descricao" placeholder="Entre seu descricao" [(ngModel)]="novaDescricao">
       
-      <label class="label" for="exampleInputEmail1">Valor</label>
-      <input type="text" name="email" class="form-control" id="email" placeholder="Entre valor" [(ngModel)]="novoValor">
+      <label class="label" for="exampleInputEmail1">Novo Valor</label>
+      <input type="text" name="novoValor" class="form-control" id="email" placeholder="Entre valor" [(ngModel)]="novoValor">
     </div>
     
     <div class="control">
