--- a/src/app/components/formulario-cliente-update/formulario-cliente-update.component.html
+++ b/src/app/components/formulario-cliente-update/formulario-cliente-update.component.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class="control">
-      <p class="voltar">Voltar</p>
+      <p class="voltar" [routerLink]="['/clientes']">Voltar</p>
       <button type="submit" class="botao">Enviar</button>
     </div>
   </form>
