--- a/src/app/components/formulario-cliente/formulario-cliente.component.html
+++ b/src/app/components/formulario-cliente/formulario-cliente.component.html
@@ -12,8 +12,8 @@
     </div>
     
     <div class="control">
-      <p class="voltar">Voltar</p>
-      <button type="submit" class="botao">Enviar</button>
+      <p class="voltar" [routerLink]="['/clientes']">Voltar</p>
+      <button type="submit" class="botao" >Enviar</button>
     </div>
   </form>
 </div>
