--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="tool-bar">
     <div class="container-menu">
         <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
-        <h3 class="item" [routerLink]="['/servico']">Serviços</h3>
+        <h3 class="item" [routerLink]="['/servicos']">Serviços</h3>
         <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
     </div>
 
