--- a/src/app/components/servicos/servico.component.html
+++ b/src/app/components/servicos/servico.component.html
@@ -6,8 +6,10 @@
     <mat-card class="sub-container" *ngFor="let servico of servicos">
       <mat-card-title-group class="header">
         <mat-card-title id="titulo">{{servico.titulo}}</mat-card-title>
-          <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
-          <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+        <div class="icons">
+            <mat-icon class="icon" (click)="deletarServico(servico.id)"> delete</mat-icon>
+            <mat-icon class="icon" (click)="enviarIdServico(servico.id)" [routerLink]="['/formulario-servico-update']">edit</mat-icon>
+        </div>
       </mat-card-title-group>
       <mat-card-content class="body">
         {{servico.descricao}}
