--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -15,32 +15,42 @@ article {
 }
 
 article form {
-    background-color: #2B2B2B;
-    padding: 40px;
-    box-shadow: 0 0 2px inset rgba(256,256,256,0.3);
-    width: 400px;
+    width: 306px;
+
     display: flex;
     flex-direction: column;
-}
 
-article form .fechar{
-    color: #43B02A;
-    align-self: flex-end;
-    cursor: pointer;
-}
-article form .fechar:hover{
-    color: #2c8019;
+    border: 4px solid #333;
+    background-color: #333;
+    border-radius: 5px;
+    padding: 30px;
 }
 
 article form input{
     display: block;
     width: 100%;
+    height: 35px;
+
+    
+    border-radius: 7px;
+    background-color: #999;
+    border: 2px solid #222;
 }
+
+article form input::placeholder{
+    padding: 5px;
+    background-color: #999;
+    color: #fff;
+}
+
 article form input:focus{
     outline-style: solid;
     outline-color: #43B02A;
     outline-width: 2px;
-    border-radius: 5px;
+    border-radius: 7px;
+
+    border: 1px solid #43B02A;
+    box-shadow: 1px 1px 3px #43B02A;
 }
 
 article form div {
@@ -49,15 +59,14 @@ article form div {
     margin-bottom: 10px;
 }
 
-article form div input {
+input {
     display: inline-block;
-    margin-right: 10px;
+    margin: 10px 0;
 }
 
 article form .controles{
     display: flex;
     justify-content: flex-end;
-    margin-top: 40px;
     margin-bottom: 0;
 }
 
@@ -78,12 +87,19 @@ article form .controles .salvar:hover{
 article form .controles .link{
     cursor: pointer;
     margin-right: auto;
+    font-weight: 700;
     
 }
 
 article form .controles .link:hover{
     color: #43B02A;
-    font-weight: 700;
+    font-weight: 800;
+}
+
+
+span {
+    cursor: pointer;
+    margin-left: 50px;
 }
 
 .campos-vazios {
