--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -1,17 +1,16 @@
 <article>
     <form>
-        <a class="fechar"><i class="material-icons" [routerLink]="['/']">close</i></a>
         <label>
             Usuario:
-            <input type="text" name="novoUsuario" id="usuario" [(ngModel)]="novoNomeUsuario">
+            <input type="text" name="novoUsuario" id="usuario" placeholder="Entre seu novo nome" [(ngModel)]="novoNomeUsuario">
         </label>
         <label>
             Senha:
-            <input type="password" name="senha" id="senha" [(ngModel)]="senha">
+            <input type="password" name="senha" id="senha" placeholder="Entre sua nova senha" [(ngModel)]="senha">
         </label>
         <label>
             Confirme sua senha:
-            <input type="password" name="senha-confirmada" id="senha" [(ngModel)]="senhaConfirmada">
+            <input type="password" name="senha-confirmada" id="senha" placeholder="Confirme sua nova senha" [(ngModel)]="senhaConfirmada">
         </label>
         <div *ngIf="senhaInvalida" class="alert alert-danger" role="alert">
             Confirmação de senha inválida
