--- a/src/app/components/servicos/servico.component.css
+++ b/src/app/components/servicos/servico.component.css
@@ -11,19 +11,23 @@
     font-size: 18px;
 }
 
-.btn{
-    border: 3px solid #43B02A;
-    background-color: #43B02A;
-    color: #fff;
-    font-weight: 700; 
-}
-
 .botoes{
     display: flex;
     justify-content: flex-end;
 }
 
-.btn:hover {
+.botao{
+    height: 40px;
+    border-radius: 5px;
+    background-color: #43B02A;
+    border: 3px solid #43B02A;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 700; 
+}
+
+.botao:hover {
+    border-radius: 5px;
     background-color: #2c8019;
     border: 3px solid #2c8019;
     color: #fff
