--- a/src/app/components/servicos/servico.component.html
+++ b/src/app/components/servicos/servico.component.html
@@ -1,6 +1,6 @@
   <div class="container">
     <div id="create-button" class="sub-container">
-      <button [routerLink]="['/formulario-servico']" type="button" class="btn btn-outline-warning">Adicionar servico</button>
+      <button [routerLink]="['/formulario-servico']" type="button" class="botao">Adicionar serviço</button>
     </div>
   
     <mat-card class="sub-container" *ngFor="let servico of servicos">
@@ -15,7 +15,7 @@
         {{servico.descricao}}
       </mat-card-content>
       <mat-card-content class="botoes">
-        <button type="submit" class="btn btn-outline-warning">R$ {{servico.valor}}</button>
+        <button type="submit" class="botao">R$ {{servico.valor}}</button>
       </mat-card-content>
     </mat-card>
   </div>
