--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -8,6 +8,10 @@
             Senha:
             <input type="password" name="senha" id="senha" placeholder="Entre sua senha" [(ngModel)]="senha">
         </label>
+        <div *ngIf="loginNaoRealizado" class="alert alert-danger" role="alert">
+            Login não realizado
+            <span (click)="esconderErro()">x</span>
+        </div>
         <div class="controles">
             <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarCampos()">Salvar</button>
