Validação com login sucessidido mostrando uma mensagem de sucesso

--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -12,6 +12,10 @@
             Login não realizado
             <span (click)="esconderErro()">x</span>
         </div>
+        <div *ngIf="loginRealizado" class="alert alert-success" role="alert">
+            Login realizado com sucesso
+            <span (click)="esconderSucesso()">x</span>
+        </div>
         <div class="controles">
             <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarCampos()">Salvar</button>
