--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -20,6 +20,7 @@
             <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)" (click)="validarCampos()">Salvar</button>
         </div>
+        <p routerLink="/cadastro-admin">Cadastro como administrador</p>
     </form>
 
 </article>
