aplicando controllers de redirecionamento, alterando style forms,  e alterando pagina de login para pagina inicial

--- a/src/app/components/formulario-admin-login/formulario-admin-login.component.html
+++ b/src/app/components/formulario-admin-login/formulario-admin-login.component.html
@@ -1,20 +1,21 @@
 <article>
+    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
     <form>
         <label>
             Usuario do administrador:
             <input type="text" name="usuario" id="usuario" placeholder="Entre seu usuario" >
         </label>
         <label>
-            Senha:  do administrador:
+            Senha do administrador:
             <input type="password" name="senha" id="senha" placeholder="Entre sua senha" >
         </label>
         <div class="controles">
-            <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar">Salvar</button>
         </div>
 
-        <div>
-            <p [routerLink]="['/login']">Login como usuário</p>
+        <div class="links">
+            <p [routerLink]="['/']" class="link">Login como usuário</p>
+            <p [routerLink]="['/cadastro-admin']" class="link">Cadastre-se como admin</p>
         </div>
     </form>
 </article>
