--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.css
@@ -5,12 +5,13 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.9);
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     transition: opacity 3s linear;
 }
 
@@ -66,12 +67,12 @@ input {
 
 article form .controles{
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin-bottom: 0;
 }
 
 article form .controles .salvar{
-    width: 70px;
+    width: 100%;
     height: 35px;
     border: none;
     border-radius: 5px;
@@ -84,18 +85,21 @@ article form .controles .salvar:hover{
     font-weight: 800;
 }
 
-article form .controles .link{
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 30px;
+}
+.link{
     cursor: pointer;
-    margin-right: auto;
-    font-weight: 700;
-    
+    font-weight: 400;
 }
-
-article form .controles .link:hover{
+.link:hover{
     color: #43B02A;
-    font-weight: 800;
+    font-weight: 600;
 }
-
 
 span {
     cursor: pointer;
