--- a/src/app/components/formulario-admin/formulario-admin.component.html
+++ b/src/app/components/formulario-admin/formulario-admin.component.html
@@ -1,26 +1,26 @@
 <article>
+    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
     <form>
         <label>
             Usuario:
-            <input type="text" name="novoUsuario" id="usuario" placeholder="Entre seu nome" [(ngModel)]="nomeAdmin">
+            <input type="text" name="novoUsuario" id="usuario" placeholder="Entre seu usuario admin" [(ngModel)]="nomeAdmin">
         </label>
         <label>
             Senha:
-            <input type="password" name="senha" id="senha" placeholder="Entre sua senha" [(ngModel)]="senhaAdmin">
+            <input type="password" name="senha" id="senha" placeholder="Entre sua senha admin" [(ngModel)]="senhaAdmin">
         </label>
         <label>
             Confirme sua senha:
-            <input type="password" name="senha-confirmada" id="senha" placeholder="Confirme sua senha"  [(ngModel)]="senhaConfAdmin">
+            <input type="password" name="senha-confirmada" id="senha" placeholder="Confirme sua senha admin"  [(ngModel)]="senhaConfAdmin">
         </label>
         <div *ngIf="senhaInvalida" class="alert alert-danger" role="alert">
             Confirmação de senha inválida
             <span (click)="esconderErro()">x</span>
         </div>
         <div class="controles">      
-            <p class="link" [routerLink]="['/']">Voltar</p>
+            <p class="link" [routerLink]="['/login-admin']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarSenha(senhaAdmin, senhaConfAdmin)" (click)="validarCampos()">Salvar</button>
         </div>
-        <p [routerLink]="['/cadastro']">Cadastro como usuário</p>
     </form>
 
 </article>
