--- a/src/app/components/formulario-usuario/formulario-usuario.component.css
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.css
@@ -5,11 +5,12 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.9);
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     transition: opacity 3s linear;
 }
