--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -1,4 +1,5 @@
 <article>
+    <img class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
     <form>
         <label>
             Usuario:
@@ -20,7 +21,6 @@
             <p class="link" [routerLink]="['/']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)" (click)="validarCampos()">Salvar</button>
         </div>
-        <p routerLink="/cadastro-admin">Cadastro como administrador</p>
     </form>
 
 </article>
