rota botão enviar

--- a/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/formulario-usuario-login/formulario-usuario-login.component.html
@@ -18,7 +18,7 @@
             <span (click)="esconderSucesso()">x</span>
         </div>
         <div class="controles">
-            <button type="submit" class="salvar" (click)="validarCampos()">Salvar</button>
+            <button type="submit" class="salvar" (click)="validarCampos()" [routerLink]="['/home']">Salvar</button>
         </div>
 
         <div class="links">
