--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,12 +1,11 @@
 <mat-toolbar class="tool-bar">
     <div class="container-menu">
-        <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
+        <img [routerLink]="['/home']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
         <h3 class="item" [routerLink]="['/servicos']">Serviços</h3>
         <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
     </div>
 
     <div class="container-options">
-        <mat-icon [routerLink]="['/login']" class="icon">login</mat-icon>
-        <mat-icon [routerLink]="['/cadastro']" class="icon">person_add</mat-icon>
+        <mat-icon [routerLink]="['/']" class="icon">login</mat-icon>
     </div>
 </mat-toolbar>
