--- a/src/app/components/formulario-admin-login/formulario-admin-login.component.html
+++ b/src/app/components/formulario-admin-login/formulario-admin-login.component.html
@@ -10,7 +10,7 @@
             <input type="password" name="senha" id="senha" placeholder="Entre sua senha" >
         </label>
         <div class="controles">
-            <button type="submit" class="salvar">Salvar</button>
+            <button type="submit" class="salvar" [routerLink]="['/home']">Salvar</button>
         </div>
 
         <div class="links">
