Melhorando lógica de valdiação do cadastro de usuário e implementando as mesmas para o admin

--- a/src/app/components/formulario-admin/formulario-admin.component.html
+++ b/src/app/components/formulario-admin/formulario-admin.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/login-admin']">Voltar</p>
-            <button type="submit" class="salvar" (click)="validarSenha(senhaAdmin, senhaConfAdmin)" (click)="validarCampos()">Salvar</button>
+            <button type="submit" class="salvar" (click)="validarCampos(senhaAdmin, senhaConfAdmin)">Salvar</button>
         </div>
     </form>
 
