--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -19,7 +19,7 @@
         </div>
         <div class="controles">      
             <p class="link" [routerLink]="['/']">Voltar</p>
-            <button type="submit" class="salvar" (click)="validarSenha(senha, senhaConfirmada)" (click)="validarCampos()">Salvar</button>
+            <button type="submit" class="salvar" (click)="validarCampos(senha, senhaConfirmada)">Salvar</button>
         </div>
     </form>
 
