--- a/src/app/components/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/formulario-usuario/formulario-usuario.component.html
@@ -11,7 +11,7 @@
         </label>
         <label>
             Confirme sua senha:
-            <input type="password" name="senha-confirmada" id="senha" placeholder="Confirme sua nova senha" [(ngModel)]="senhaConfirmada">
+            <input type="password" name="senha-confirmada" id="senhaC" placeholder="Confirme sua nova senha" [(ngModel)]="senhaConfirmada">
         </label>
         <div *ngIf="senhaInvalida" class="alert alert-danger" role="alert">
             Confirmação de senha inválida
