--- a/src/app/components/layout/home/home.component.css
+++ b/src/app/components/layout/home/home.component.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
 
+/* tag main */
+main {
+    margin: 10px 10px 10px 10px;
+    color: #FFFFFF;
+    font-family: 'Montserrat', sans-serif;
+}
+
+/* tool bar */
 .tool-bar {
     display: flex;
     align-items: center;
@@ -48,4 +56,17 @@
 
 .icon:hover {
     color: #43B02A;
+}
+
+/* footer */
+.footer {
+    background-color: #2B2B2B;
+    font-family: 'Montserrat', sans-serif;
+    box-shadow: 0px 5px 10px gray;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+    text-align: center;
 }
