Finalizando a parte visual da autenticação de login

--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.html
@@ -6,6 +6,10 @@
             <input type="text" name="usuario" id="usuario" placeholder="Entre seu usuario" [(ngModel)]="nomeUsuario">
         </label>
         <label>
+            Email:
+            <input type="text" name="usuario" id="usuario" placeholder="Entre seu usuario" [(ngModel)]="email">
+        </label>
+        <label>
             Senha:
             <input type="password" name="senha" id="senha" placeholder="Entre sua senha" [(ngModel)]="senha">
         </label>
