Fix bug da autenticação

--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.html
@@ -18,7 +18,7 @@
             <span (click)="esconderErro()">x</span>
         </div>
         <div class="controles">      
-            <p class="link" [routerLink]="['/']">Voltar</p>
+            <p class="link" [routerLink]="['/login']">Voltar</p>
             <button type="submit" class="salvar" (click)="validarCampos(senha, senhaConfirmada)">Salvar</button>
         </div>
     </form>
