--- a/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
+++ b/src/app/components/conta/formulario-usuario-login/formulario-usuario-login.component.css
@@ -5,7 +5,7 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.9);
+    background-color: #181818;
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
@@ -14,8 +14,8 @@ article {
     flex-direction: column;
     transition: opacity 3s linear;
 }
-
 article form {
+    color: #fff;
     width: 306px;
 
     display: flex;
@@ -28,13 +28,15 @@ article form {
 }
 
 article form input{
+    color: #fff;
+    margin: 5px auto;
     display: block;
     width: 100%;
     height: 35px;
 
     
     border-radius: 7px;
-    background-color: #999;
+    background-color: #888;
     border: 2px solid #222;
 }
 
@@ -90,11 +92,13 @@ article form .controles .salvar:hover{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 30px;
+    padding-top: 20px;
+    color: #fff;
 }
 .link{
     cursor: pointer;
     font-weight: 400;
+    margin: 0;
 }
 .link:hover{
     color: #43B02A;
