--- a/src/app/components/conta/formulario-usuario/formulario-usuario.component.css
+++ b/src/app/components/conta/formulario-usuario/formulario-usuario.component.css
@@ -5,17 +5,17 @@ article {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.9);
+    background-color: #181818;
     backdrop-filter: blur(6px);
     z-index: 2;
     display: flex;
     justify-content: center;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
     transition: opacity 3s linear;
 }
-
 article form {
+    color: #fff;
     width: 306px;
 
     display: flex;
@@ -28,13 +28,15 @@ article form {
 }
 
 article form input{
+    color: #fff;
+    margin: 5px auto;
     display: block;
     width: 100%;
     height: 35px;
 
     
     border-radius: 7px;
-    background-color: #999;
+    background-color: #888;
     border: 2px solid #222;
 }
 
@@ -67,7 +69,7 @@ input {
 
 article form .controles{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     margin-bottom: 0;
 }
 
@@ -85,18 +87,23 @@ article form .controles .salvar:hover{
     font-weight: 800;
 }
 
-article form .controles .link{
+.links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 20px;
+    color: #fff;
+}
+.link{
     cursor: pointer;
-    margin-right: auto;
-    font-weight: 700;
-    
+    font-weight: 400;
+    margin: 0;
 }
-
-article form .controles .link:hover{
+.link:hover{
     color: #43B02A;
-    font-weight: 800;
+    font-weight: 600;
 }
-
 
 span {
     cursor: pointer;
@@ -107,6 +114,6 @@ span {
     border: 1px solid red;
 }
 
-p {
-    cursor: pointer;    
+P {
+    cursor: pointer;
 }
