Implementada a funcionalidade de logout da aplicação

--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="container-options">
-      <mat-icon [routerLink]="['/']" class="icon">login</mat-icon>
+      <mat-icon [routerLink]="['/']" class="icon" (click)="logoutUsuario()">logout</mat-icon>
   </div>
 </mat-toolbar>
 <main>
