--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="tool-bar">
   <div class="container-menu">
-      <img [routerLink]="['/home']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
+      <img [routerLink]="['/']" class="img" src="assets\img\Consult-logo.png" alt="logo-deloitte">
       <h3 class="item" [routerLink]="['/servicos']">Serviços</h3>
       <h3 class="item" [routerLink]="['/clientes']">Clientes</h3>
   </div>
