--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -1,1 +1,17 @@
-<p>main works!</p>
+<ngb-carousel class="container">
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img src="assets\img\banner1.jpg" alt="Random first slide">
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img src="assets\img\banner2.jpg" alt="Random second slide">
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <div class="picsum-img-wrapper">
+      <img src="assets\img\banner3.jpg" alt="Random third slide">
+    </div>
+  </ng-template>
+</ngb-carousel>
