--- a/src/app/components/entidades/main/main.component.html
+++ b/src/app/components/entidades/main/main.component.html
@@ -16,26 +16,28 @@
   </ng-template>
 </ngb-carousel>
 
-<article class="container-info">
-  <img src="assets\img\img1.jpg" alt="" class="img">
-  <div class="descricao">
-    <h3>Titulo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
-  </div>
-</article>
-
-<article class="container-info">
-  <div class="descricao">
-    <h3>Titulo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
-  </div>
-  <img src="assets\img\img2.jpg" alt="" class="img">
-</article>
-
-<article class="container-info">
-  <img src="assets\img\img3.jpg" alt="" class="img">
-  <div class="descricao">
-    <h3>Titulo</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
-  </div>
-</article>
+<div class="container">
+  <article class="container-info">
+    <img src="assets\img\img1.jpg" alt="" class="img">
+    <div class="descricao">
+      <h3>Titulo</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
+    </div>
+  </article>
+  
+  <article class="container-info">
+    <div class="descricao">
+      <h3>Titulo</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
+    </div>
+    <img src="assets\img\img2.jpg" alt="" class="img">
+  </article>
+  
+  <article class="container-info">
+    <img src="assets\img\img3.jpg" alt="" class="img">
+    <div class="descricao">
+      <h3>Titulo</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea numquam aperiam dolore aspernatur rem cum quos, repudiandae delectus soluta cumque voluptate, vel quibusdam aliquid deserunt sint corrupti doloribus inventore, dolorem molestiae repellat esse. Accusamus amet tenetur aspernatur consequuntur aperiam omnis ratione earum nisi corporis voluptatum, doloremque eveniet impedit et quae illo sequi repudiandae sed quibusdam dicta minus tempora harum. Voluptates quo laboriosam at, modi provident repudiandae magnam earum. Rem, molestiae! Quia, tenetur. Voluptatem similique, suscipit expedita atque, delectus magnam maiores nostrum reprehenderit saepe dolore facere molestias maxime enim necessitatibus veritatis. Quia facilis soluta deserunt reprehenderit impedit repellendus architecto fugiat quisquam.</p>
+    </div>
+  </article>
+</div>
