--- a/src/app/components/entidades/main/main.component.css
+++ b/src/app/components/entidades/main/main.component.css
@@ -3,6 +3,7 @@
     color: #fff;
 }
 .container-info {
+    text-align: justify;
     max-width: 1366px;
     margin: 30px auto;
     background-color: #333;
@@ -12,7 +13,7 @@
     align-items: center;
     gap: 50px;
     border-radius: 10px;
-    padding: 20px;
+    padding: 40px;
 }
 
 .descricao{
